// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsListItem Single news with author should render and match the snapshot 1`] = `
<div
  class="news-details-page"
>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-24"
    >
      <h1
        class="news-details-title"
      >
        Kentucky Crowd Cheers Valedictorian’s Trump Quote, Then Learns Obama Said It
      </h1>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-sm-8 ant-col-md-8 ant-col-lg-6 ant-col-xl-5 ant-col-xxl-4"
    >
      <img
        align="center"
        alt="Kentucky Crowd Cheers Valedictorian’s Trump Quote, Then Learns Obama Said It"
        class="news-details-image"
        src="https://static01.nyt.com/images/2018/06/04/us/05xp-graduation2/05xp-graduation2-mediumThreeByTwo440.jpg"
        width="150"
      />
    </div>
    <div
      class="ant-col ant-col-xs-24 ant-col-sm-116 ant-col-md-16 ant-col-lg-18 ant-col-xl-19 ant-col-xxl-20"
    >
      <p
        class="news-details-body"
      >
        A high school valedictorian quoted Trump. The crowd roared. Then: “Just kidding,” he said. “That was Barack Obama.”
      </p>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-calendar fa-w-14 "
          data-icon="calendar"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
            fill="currentColor"
          />
        </svg>
         
        2018-06-04
         
        <br />
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user fa-w-14 "
          data-icon="user"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
            fill="currentColor"
          />
        </svg>
         
        By LAURA M. HOLSON
      </div>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-24"
    >
      <a
        class="news-details-back"
        href="/news"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-left fa-w-14 "
          data-icon="arrow-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
            fill="currentColor"
          />
        </svg>
         Back to all news
      </a>
    </div>
  </div>
</div>
`;

exports[`NewsListItem Single news without author should render and match the snapshot 1`] = `
<div
  class="news-details-page"
>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-24"
    >
      <h1
        class="news-details-title"
      >
        Kentucky Crowd Cheers Valedictorian’s Trump Quote, Then Learns Obama Said It
      </h1>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-sm-8 ant-col-md-8 ant-col-lg-6 ant-col-xl-5 ant-col-xxl-4"
    >
      <img
        align="center"
        alt="Kentucky Crowd Cheers Valedictorian’s Trump Quote, Then Learns Obama Said It"
        class="news-details-image"
        src="https://static01.nyt.com/images/2018/06/04/us/05xp-graduation2/05xp-graduation2-mediumThreeByTwo440.jpg"
        width="150"
      />
    </div>
    <div
      class="ant-col ant-col-xs-24 ant-col-sm-116 ant-col-md-16 ant-col-lg-18 ant-col-xl-19 ant-col-xxl-20"
    >
      <p
        class="news-details-body"
      >
        A high school valedictorian quoted Trump. The crowd roared. Then: “Just kidding,” he said. “That was Barack Obama.”
      </p>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-calendar fa-w-14 "
          data-icon="calendar"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
            fill="currentColor"
          />
        </svg>
         
        2018-06-04
         
        <br />
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user fa-w-14 "
          data-icon="user"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
            fill="currentColor"
          />
        </svg>
         
        unknown author
      </div>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-24"
    >
      <a
        class="news-details-back"
        href="/news"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-left fa-w-14 "
          data-icon="arrow-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
            fill="currentColor"
          />
        </svg>
         Back to all news
      </a>
    </div>
  </div>
</div>
`;
